--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type": "git",
     "url": ""
   },
+  "license": "MIT",
   "dependencies": {
     "counterjs": "0.0.2",
     "moment": "^2.17.1",
